--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "jade": "~1.11.0",
+    "express-handlebars": "*",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "passport": "*",
+    "passport-http": "*",
+    "passport-local": "*",
+    "mongodb": "*",
+    "mongoose": "*",
+    "express-session": "*",
+    "connect-flash": "*",
+    "express-messages": "*",
+    "express-validator": "*",
+    "bcryptjs": "*"
   }
 }
