--- a/package.json
+++ b/package.json
@@ -2,24 +2,24 @@
   "name": "elearn",
   "version": "0.0.0",
   "private": true,
-
   "dependencies": {
+    "async": "^2.0.0-rc.3",
+    "bcryptjs": "^2.3.0",
     "body-parser": "~1.13.2",
+    "connect-flash": "*",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-handlebars": "*",
+    "express-messages": "*",
+    "express-session": "*",
+    "express-validator": "*",
+    "mongodb": "*",
+    "mongoose": "*",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
     "passport": "*",
     "passport-http": "*",
     "passport-local": "*",
-    "mongodb": "*",
-    "mongoose": "*",
-    "express-session": "*",
-    "connect-flash": "*",
-    "express-messages": "*",
-    "express-validator": "*",
-    "bcryptjs": "*"
+    "serve-favicon": "~2.3.0"
   }
 }
